crates/mcb-server/tests/contract/snapshots/contract__search_contract_tests__search_invalid_args.snap
---
source: crates/mcb-server/tests/contract/search_contract_tests.rs
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "search_code",
      "arguments": {
        "query": 999
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "error": {
      "code": -32602,
      "message": "Missing execution provenance for 'search_code': session_id, repo_id, operator_id, machine_id, agent_program, model_id, delegated, timestamp"
    },
    "id": 1
  }
}
